--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       >
 
       <div class="navbar-nav">
-        <a href="index-Pustikum.html">Beranda</a>
+        <a href="index.html">Beranda</a>
         <div class="dropdown">
           <a href="about.html">Tentang Kami</a>
           <div class="isi-dropdown">
@@ -157,8 +157,8 @@
         <a href="#"><i data-feather="linkedin"></i></a>
       </div>
       <div class="links">
-        <a href="index-Pustikum.html">Beranda</a>
-        <a href="index-Pustikum.html#about">Tentang Kami</a>
+        <a href="index.html">Beranda</a>
+        <a href="index.html#about">Tentang Kami</a>
         <a href="event.html#event">Event</a>
         <a href="#registraion">Pendaftaran</a>
         <a href="#kontak">Contact us</a>
