--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
                   top: 0;
                 "
               >
-              <source src="CSS/Sertijab-Pustikum23.mp4" type="video/mp4"></video><br> 
+              <source src="css/Sertijab-Pustikum23.mp4" type="video/mp4"></video><br> 
             </div>
               <br />
             </center>
@@ -104,7 +104,7 @@
           <iframe
           autoplay
           muted
-            src="CSS/Sertijab-Pustikum23.mp4" type="video/mp4">
+            src="css/Sertijab-Pustikum23.mp4" type="video/mp4">
 
             alt="Tentang Kami"
           </iframe>
