--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 top: 0;
               "
             >
-            <source src="CSS/Sertijab-Pustikum23.mp4" type="video/mp4"></video><br> 
+            <source src="css/Sertijab-Pustikum23.mp4" type="video/mp4"></video><br> 
           </div>
             <br />
           </center>
