--- a/index.html
+++ b/index.html
@@ -28,15 +28,17 @@
               width="40%"
               style="border-radius: 100px; border: 2px"
             />
-            <a href="about.html"><h3>Pustikum profile</h3></a>
+            <a href="about.html"><h3>PROFIL PUSTIKUM</h3></a> <br>
             <p margin-top: 0>Pustakawan profesional FAH</p>
             <div class="icons-sidebar">
-              <a href="Gallery.html"><i data-feather="image"></i></a>
-              <a href="https://www.instagram.com/pustikum_fah/" target="_blank"
+<a href="Gallery.html"><i data-feather="image"></i></a>
+<a href="https://www.youtube.com/@pustikumfah2101" target="_blank"
+><i data-feather="youtube"></i
+></a>
+<a href="https://www.instagram.com/pustikum_fah/" target="_blank"
                 ><i data-feather="instagram"></i
               ></a>
             </div>
-            <br>
             <h3 style="color: rgb(252, 205, 37)">OUR JOURNEY</h3>
             <video
               controls
@@ -54,7 +56,6 @@
             >
             <source src="css/Sertijab-Pustikum23.mp4" type="video/mp4"></video><br> 
           </div>
-            <br />
           </center>
         </div>
         <!--Fix sidebar end-->
@@ -83,7 +84,7 @@
         <a href="event.html">Event</a>
         <a href="#registraion">Pendaftaran</a>
         <a href="#kontak">Contact us</a>
-        <a href="#Gallery.html">Gallery</a>
+        <a href="Gallery.html">Gallery</a>
       </div>
 
       <div class="navbar-extra">
@@ -138,8 +139,14 @@
               <a href="article2.html">Read More</a>
             </div>
             <div class="article">
-              <img src="css/article3.jpeg" alt="Artikel 3">
-              <h3>Artikel 3</h3>
+              <img src="css/article3.jpg" alt="Artikel 3">
+              <h3>OPEN RECRUITMENT ANGGOTA PUSTIKUM 2021</h3>
+              <p>Ringkasan artikel 3. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+              <a href="article3.html">Read More</a>
+            </div>
+            <div class="article">
+              <img src="css/article4.png" alt="Artikel 3">
+              <h3>OPEN RECRUITMENT ANGGOTA PUSTIKUM 2022</h3>
               <p>Ringkasan artikel 3. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
               <a href="article3.html">Read More</a>
             </div>
