--- a/Gallery.html
+++ b/Gallery.html
@@ -28,20 +28,24 @@
               width="40%"
               style="border-radius: 100px; border: 2px"
             />
-            <a href="about.html"><h3>Pustikum profile</h3></a>
+            <a href="about.html"><h3>PROFIL PUSTIKUM</h3></a> <br>
             <p margin-top: 0>Pustakawan profesional FAH</p>
             <div class="icons-sidebar">
-              <a href="galeri.html"><i data-feather="image"></i></a>
-              <a href="https://www.instagram.com/pustikum_fah/" target="_blank"
+<a href="Gallery.html"><i data-feather="image"></i></a>
+<a href="https://www.youtube.com/@pustikumfah2101" target="_blank"
+><i data-feather="youtube"></i
+></a>
+<a href="https://www.instagram.com/pustikum_fah/" target="_blank"
                 ><i data-feather="instagram"></i
               ></a>
             </div>
-            <h3 style="color: orangered">our journey</h3>
-            <br />
+            <h3 style="color: rgb(252, 205, 37)">OUR JOURNEY</h3>
             <video
               controls
               width="130px"
-              height="150px"
+              height="130px"
+              autoplay
+              muted
               style="
                 padding-left: 5px;
                 padding-right: 8px;
@@ -50,16 +54,8 @@
                 top: 0;
               "
             >
-            <div class="about-video">
-              <iframe
-                src="https://drive.google.com/file/d/18SiTTDuKQOvMOKg62RzDpTVWuNowPjVF/preview"
-                allow="autoplay"
-              >
-                alt="Tentang Kami"
-              </iframe>
-              type="video/mp4" /></video
-            > </div>
-            <br />
+            <source src="css/Sertijab-Pustikum23.mp4" type="video/mp4"></video><br> 
+          </div>
           </center>
         </div>
         <!--Fix sidebar end-->
@@ -73,7 +69,7 @@
       >
 
       <div class="navbar-nav">
-        <a href="index-Pustikum.html">Beranda</a>
+        <a href="index.html">Beranda</a>
         <div class="dropdown">
           <a href="about.html">Tentang Kami</a>
           <div class="isi-dropdown">
@@ -129,17 +125,11 @@
           <section id="history">
           <h3>Sejarah PUS<span>TIKUM</span></h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Perferendis, cum! Tempore explicabo quia aliquid exercitationem
-            laborum quis commodi doloremque quo amet expedita quidem fugiat quas
-            aut molestiae unde ullam assumenda est quae, nemo similique ab!
-            Natus voluptas mollitia ipsum sequi neque, at expedita placeat
-            deleniti, culpa id autem quo voluptatum.
+            Pada masa kepemimpinan HMJ Ilmu Perpustakaan Egi Almaroghi pada tahun 2015, beliau membuat program kerja “mahasiswa magang di perpustakaan FAH” dan memberi mandat kepada Irfan Herwandi selaku ketua Departemen Litbang untuk mencari PIC program tersebut, yang akhirnya memutuskan bahwa Fadli Muhammad dinilai cocok untuk menjadi ketua / PIC proker tersebut. 
+            Dilaksanakan pembuatan struktur organisasi di periode pertama oleh bapak Ade Abdul Hak dengan tujuan penambahan tenaga perpustakaan dan wadah mahasiswa belajar yang dikepalai oleh Sodara fadli Muhammad (05/01/2015).
           </p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
-            explicabo ipsa mollitia quos fuga, quasi eum sit nobis voluptas
-            tenetur!
+            Pada masa kepemimpinan HMJ presiden Abil Ramandha dan Caesar sebagai ketua departemen Litbang dan Yudo sebagai anggotanya saat itu tahun 2016 HMJ sudah tidak memegang kendali Kegiatan mahasiswa magang di perpustakaan dan pada akhirnya bapak Ade Abdul Hak membuat struktur organisasi di periode ke 2 yang dikepalai oleh Sodara Yudo dan diberikan nama PUSTIKUM oleh bapak Dr Ade Abdul Hak, S.Ag,. S.S,.M.Hum
           </p>
         </section>
         <section id="vision"></section>
@@ -175,8 +165,8 @@
         <a href="#"><i data-feather="linkedin"></i></a>
       </div>
       <div class="links">
-        <a href="index-Pustikum.html">Beranda</a>
-        <a href="index-Pustikum.html#about">Tentang Kami</a>
+        <a href="index.html">Beranda</a>
+        <a href="about.html">Tentang Kami</a>
         <a href="event.html#event">Event</a>
         <a href="#registraion">Pendaftaran</a>
         <a href="#kontak">Contact us</a>
