--- a/event.html
+++ b/event.html
@@ -28,15 +28,18 @@
               width="40%"
               style="border-radius: 100px; border: 2px"
             />
-            <a href="about.html"><h3>Pustikum profile</h3></a>
+            <a href="about.html"><h3>PROFIL PUSTIKUM</h3></a> <br>
             <p margin-top: 0>Pustakawan profesional FAH</p>
             <div class="icons-sidebar">
-              <a href="galeri.html"><i data-feather="image"></i></a>
-              <a href="https://www.instagram.com/pustikum_fah/" target="_blank"
+<a href="Gallery.html"><i data-feather="image"></i></a>
+<a href="https://www.youtube.com/@pustikumfah2101" target="_blank"
+><i data-feather="youtube"></i
+></a>
+<a href="https://www.instagram.com/pustikum_fah/" target="_blank"
                 ><i data-feather="instagram"></i
               ></a>
             </div>
-            <h3 style="color: rgb(199, 238, 5)">OUR JOURNEY</h3>
+            <h3 style="color: rgb(252, 205, 37)">OUR JOURNEY</h3>
             <video
               controls
               width="130px"
@@ -53,7 +56,6 @@
             >
             <source src="css/Sertijab-Pustikum23.mp4" type="video/mp4"></video><br> 
           </div>
-            <br />
           </center>
         </div>
         <!--Fix sidebar end-->
@@ -106,18 +108,12 @@
         <div class="content">
          <h3>Piket Harian PUS<span>TIKUM</span></h3>
          <p>
-         Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-         Perferendis, cum! Tempore explicabo quia aliquid exercitationem
-         laborum quis commodi doloremque quo amet expedita quidem fugiat quas
-         aut molestiae unde ullam assumenda est quae, nemo similique ab!
-         Natus voluptas mollitia ipsum sequi neque, at expedita placeat
-         deleniti, culpa id autem quo voluptatum.
+         Piket harian yang dilakukan oleh PUSTIKUM merupakan program kerja yang wajib dilaksanakan oleh setiap anggota PUSTIKUM.
+         Piket harian ini juga tentu selaras dengan tujuan PUSTIKUM guna melatih & meningkatkan hard skill & soft skill para anggotanya dengan praktik langsung bidang ilmu perpustakaan.
+         Terdapat berbagai layanan yang dilaksanakan pada piket harian, layanan pemustaka maupun teknis seperti, layanan sirkulasi, penginputan bahan koleksi, shelving, preservasi dan lain sebagainya.
          </p>
          <p>
-           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
-           explicabo ipsa mollitia quos fuga, quasi eum sit nobis voluptas
-           tenetur!
-         </p>
+          Pelaksanaan piket harian PUSTIKUM dilaksanakan pada Perpustakaan Fakultas Adab dan Humaniora, dimana PUSTIKUM sudah bekerja sama dan memiliki kontrak dalam membantu oprasional perpustakaan dengan pihak Perpustakaan Fakultas Adab dan Humaniora.         </p>
     
     <!-- Slideshow container -->
     <div class="slideshow-container">
