--- a/about.html
+++ b/about.html
@@ -22,41 +22,43 @@
   <body>
         <!--Fix sidebar start-->
         <div class="sidebar">
-            <center>
-              <img
-                src="css/logo_pustikum.png"
-                width="40%"
-                style="border-radius: 100px; border: 2px"
-              />
-              <a href="about.html"><h3>Pustikum profile</h3></a>
-              <p margin-top: 0>Pustakawan profesional FAH</p>
-              <div class="icons-sidebar">
-                <a href="galeri.html"><i data-feather="image"></i></a>
-                <a href="https://www.instagram.com/pustikum_fah/" target="_blank"
-                  ><i data-feather="instagram"></i
-                ></a>
-              </div>
-              <h3 style="color: rgb(199, 238, 5)">OUR JOURNEY</h3>
-              <video
-                controls
-                width="130px"
-                height="130px"
-                autoplay
-                muted
-                style="
-                  padding-left: 5px;
-                  padding-right: 8px;
-                  padding-bottom: 5px;
-                  margin-top: 0;
-                  top: 0;
-                "
-              >
-              <source src="css/Sertijab-Pustikum23.mp4" type="video/mp4"></video><br> 
+          <center>
+            <img
+              src="css/logo_pustikum.png"
+              width="40%"
+              style="border-radius: 100px; border: 2px"
+            />
+            <a href="about.html"><h3>PROFIL PUSTIKUM</h3></a> <br>
+            <p margin-top: 0>Pustakawan profesional FAH</p>
+            <div class="icons-sidebar">
+<a href="Gallery.html"><i data-feather="image"></i></a>
+<a href="https://www.youtube.com/@pustikumfah2101" target="_blank"
+><i data-feather="youtube"></i
+></a>
+<a href="https://www.instagram.com/pustikum_fah/" target="_blank"
+                ><i data-feather="instagram"></i
+              ></a>
             </div>
-              <br />
-            </center>
+            <h3 style="color: rgb(252, 205, 37)">OUR JOURNEY</h3>
+            <video
+              controls
+              width="130px"
+              height="130px"
+              autoplay
+              muted
+              style="
+                padding-left: 5px;
+                padding-right: 8px;
+                padding-bottom: 5px;
+                margin-top: 0;
+                top: 0;
+              "
+            >
+            <source src="css/Sertijab-Pustikum23.mp4" type="video/mp4"></video><br> 
           </div>
-          <!--Fix sidebar end-->
+          </center>
+        </div>
+        <!--Fix sidebar end-->
 
     <!--Navbar start-->
     <nav class="navbar">
@@ -113,19 +115,14 @@
           <section id="history">
           <h3>Sejarah PUS<span>TIKUM</span></h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Perferendis, cum! Tempore explicabo quia aliquid exercitationem
-            laborum quis commodi doloremque quo amet expedita quidem fugiat quas
-            aut molestiae unde ullam assumenda est quae, nemo similique ab!
-            Natus voluptas mollitia ipsum sequi neque, at expedita placeat
-            deleniti, culpa id autem quo voluptatum.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
-            explicabo ipsa mollitia quos fuga, quasi eum sit nobis voluptas
-            tenetur!
-          </p>
-        </section>
+          Pada masa kepemimpinan HMJ Ilmu Perpustakaan Egi Almaroghi pada tahun 2015, beliau membuat program kerja “mahasiswa magang di perpustakaan FAH” dan memberi mandat kepada Irfan Herwandi selaku ketua Departemen Litbang untuk mencari PIC program tersebut, yang akhirnya memutuskan bahwa Fadli Muhammad dinilai cocok untuk menjadi ketua / PIC proker tersebut. 
+          Dilaksanakan pembuatan struktur organisasi di periode pertama oleh bapak Ade Abdul Hak dengan tujuan penambahan tenaga perpustakaan dan wadah mahasiswa belajar yang dikepalai oleh Saudara fadli Muhammad (05/01/2015).
+        </p>
+        <p>
+          Pada tahun 2016 masa kepemimpinan HMJ presiden Abil Ramandha, Caesar ketua departemen Litbang, dan Yudo sebagai salah satu anggotanya saat itu. HMJ sudah tidak memegang kendali kegiatan mahasiswa magang di perpustakaan, dan pada akhirnya bapak Ade Abdul Hak membuat struktur organisasi di periode ke-2 yang dikepalai oleh Saudara Yudo dan diberikan nama PUSTIKUM oleh bapak Dr Ade Abdul Hak, S.Ag,. S.S,.M.Hum.
+        </p>
+        <p>Semenjak pergantian nama menjadi organisasi PUSTIKUM dan peralihan pemegang tanggung jawab pada 2016 tersebut, PUSTIKUM telah mengalami berbagai progress dan juga perkembangan dari bertambahnya fasilitas penunjang seperti diadakannya ruangan PUSTIKUM dan peralatan preservasi, pengadaan kegiatan yang lebih beragam, peluang kerja sama dan magang guna membantu perpustakaan selain perpustakaan Fakultas Adab dan Humaniora, baik sekitar maupun di luar kawasan UIN Jakarta, dan berbagai perkembangan lainnya. Perkembangan terbaru PUSTIKUM salah satunya ialah resminya PUSTIKUM menjadi salah satu Lembaga Otonom di Fakultas Adab dan Humaniora yang diresmikan pada 09/27/2023.</p>
+      </section>
         <section id="vision"></section>
           <h3>Visi PUS<span>TIKUM</span></h3>
           <p>
@@ -166,8 +163,8 @@
       </div>
       <div class="links">
         <a href="index.html">Beranda</a>
-        <a href="index.html#about">Tentang Kami</a>
-        <a href="event.html#event">Event</a>
+        <a href="about.html">Tentang Kami</a>
+        <a href="event.html">Event</a>
         <a href="#registraion">Pendaftaran</a>
         <a href="#kontak">Contact us</a>
         <a href="Gallery.html">Gallery</a>
