--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="article">
               <img src="css/article3.png" alt="Artikel 3">
               <h3>OPEN RECRUITMENT ANGGOTA PUSTIKUM 2022</h3>
-              <p>Ringkasan artikel 3. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+              <p>Hi! Apa kabar temen-temen Jipers? Kabar gembira untuk kalian semua, kali ini kita mau mengajak kalian bergabung di keanggotaan PUSTIKUM (Pustakawan Praktikum) untuk Mahasiswa/i Ilmu Perpustakaan dan Informasi UIN Syarif Hidayahtullah Jakarta khususnya...</p>
               <a href="article3.html">Read More</a>
             </div>
               <a href="news.html" class="hover-effect"><h3>Lihat semua</h3>
