--- a/news.html
+++ b/news.html
@@ -153,7 +153,23 @@
         </div>
        </footer>
        <!--Footer end-->
-         
+    
+  <!-- Default Statcounter code for PUSTIKUM
+https://3nami.github.io/web_statis/?authuser=3 -->
+<script type="text/javascript">
+var sc_project=12942252; 
+var sc_invisible=0; 
+var sc_security="a3b32502"; 
+var scJsHost = "https://";
+document.write("<sc"+"ript type='text/javascript' src='" + scJsHost+
+"statcounter.com/counter/counter.js'></"+"script>");
+</script>
+<noscript><div class="statcounter"><a title="Web Analytics"
+href="https://statcounter.com/" target="_blank"><img class="statcounter"
+src="https://c.statcounter.com/12942252/0/a3b32502/0/" alt="Web Analytics"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
+<a href="https://statcounter.com/p12942252/?guest=1">Viewer</a>       
   
       <!--feather-icon-->
   
